src/css/achievements.css
#modal-achievements {
  display: none;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 20px;
  padding: 20px;
}

.achievements-title-container {
  display: flex;
  flex-direction: row;
  justify-content: start;
  align-items: center;
  gap: 10px;
  position: relative;
  width: calc(85% + 3px);
  margin: 0 auto;
  padding-left: 20px;
}
.achievements-title-container::before {
  content: "";
  display: inline-block;
  width: 30px;
  height: 30px;
  background-color: var(--primary-color);
  mask-image: url('../assets/images/achievement.svg');
  mask-size: contain;
  mask-repeat: no-repeat;
  opacity: 0;
}
.achievements-title-container::after {
  content: '';
  position: absolute;
  bottom: -4px;
  left: 0;
  width: 0;
  height: 2px;
  background-color: var(--primary-color);
  transition: width 0.8s ease-out;
}
.achievements-title-text {
  position: relative;
  font-size: 1.1rem;
  font-weight: bold;
  color: var(--primary-color);
  opacity: 0;
  transition: opacity 0.6s ease-out;
}
.achievements-title-container.active::before {
  animation: dropBounce 1s both;
}
.achievements-title-container.active::after {
  width: 100%;
  transition-delay: 0.5s;
}
.achievements-title-container.active .achievements-title-text {
  opacity: 1;
  transition-delay: 0.2s;
}

@keyframes dropBounce {
  0% {
    opacity: 0;
    transform: translateY(-60px) rotate(0deg);
    animation-timing-function: ease-in;
  }
  32% {
    opacity: 1;
    transform: translateY(0) rotate(0deg);
    animation-timing-function: ease-out;
  }
  48% {
    transform: translateY(-20px) rotate(0deg);
    animation-timing-function: ease-in;
  }
  64% {
    transform: translateY(0) rotate(0deg);
  }
  90% {
    transform: translateY(0) rotate(-15deg);
  }
  97% {
    transform: translateY(0) rotate(5deg);
  }
  100% {
    opacity: 1;
    transform: translateY(0) rotate(0deg);
  }
}

/* user */
.achievements-user-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 20px;
  width: calc(85% + 3px);
}
.achievements-user-icon {
  width: 50px;
  height: 50px;
  background-color: var(--primary-color);
  border-radius: 50%;
  mask-image: url('../assets/images/user.svg');
  mask-size: cover;
  mask-position: center;
  mask-repeat: no-repeat;
}
.achievements-user-level-container {
  display: flex;
  flex-direction: column;
  flex: 1;
  gap: 10px;
}

.achievements-user-level-text {
  font-size: .8rem;
}
.achievements-user-level-text.experience {
  text-align: right;
}

.achievements-user-level-bar {
  width: 100%;
  height: 6px;
  background-color: transparent;
  border: 1px solid var(--border-color);
  border-radius: 3px;
  overflow: hidden;
}
.achievements-user-level-bar-fill {
  height: 100%;
  background-color: var(--secondary-color);
  border-radius: 3px;
  transition: width 0.3s ease-in-out;
}

/* main */
.achievements-tabs-container {
  display: flex;
  flex-direction: column;
  flex: 1;
  gap: 20px;
  width: calc(85% + 3px);
  height: 100%;
  overflow-x: hidden;
}
.achievements-tabs-background {
  position: absolute;
  top: 3px;
  left: 0;
  height: calc(100% - 6px);
  background-color: var(--primary-color);
  border-radius: calc(.9rem * 1.6 + 10px + 6px - 6px);
  transition: transform 0.3s cubic-bezier(0.25, 1, 0.5, 1), width 0.3s cubic-bezier(0.25, 1, 0.5, 1);
  z-index: 0;
  pointer-events: none;
}
.achievements-tabs-label {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 10px;
  position: relative;
  padding: 3px;
  background-color: rgba(from var(--text-color) r g b / 0.2);
  border-radius: calc(.9rem * 1.6 + 10px + 6px);
}
.achievements-tabs-label-item {
  flex: 1;
  padding: 5px;
  font-size: .9rem;
  border: none;
  border-radius: calc(.9rem * 1.6 + 10px + 6px - 6px);
  background: none;
  cursor: pointer;
  z-index: 1;
}
.achievements-tabs-label-item.current {
  color: var(--theme-contrast-color);
  transition: all 0.3s ease-in-out;
}

/* content */
.achievements-tabs-content {
  display: flex;
  height: 100%;
  overflow-x: auto;
  scroll-snap-type: x mandatory;
  scroll-behavior: smooth;
  scrollbar-width: none;
}
.achievements-tabs-content-item {
  min-width: 100%;
  scroll-snap-align: start;
}

/* achievement */
.achievements-tabs-content-item.achievement {
  display: flex;
  flex-direction: column;
  gap: 15px;
  width: 100%;
  height: 100%;
  overflow-y: auto;
  scrollbar-width: none;
  -ms-overflow-style: none;
}
.achievement-item {
  display: flex;
  flex-direction: column;
  gap: 5px;
  background-color: rgba(from var(--text-color) r g b / 0.05);
  border-radius: 10px;
  padding: 10px;
  transition: all 0.4s ease-out;
}
.achievement-item.gained {
  filter: grayscale(100%);
  opacity: 0.7;
}
.achievement-item-info {
  display: grid;
  grid-template-columns: auto 1fr auto;
  align-items: center;
  gap: 10px;
}
.achievement-item-icon {
  width: 30px;
  height: 30px;
  background-color: var(--primary-color);
  border-radius: 50%;
  mask-image: url('../assets/images/crown.svg');
  mask-size: cover;
  mask-position: center;
  mask-repeat: no-repeat;
}
.achievement-item-text {
  display: flex;
  flex-direction: column;
  gap: 5px;
}
.achievement-item-name {
  font-size: .9rem;
  font-weight: bold;
}
.achievement-item-description {
  font-size: .7rem;
}

.achievement-item-exp-text {
  font-size: .7rem;
  color: var(--primary-color);
}
.achievement-item-gained {
  padding: 2px 12px;
  border-radius: calc(.7rem * 1.6 + 4px);
  font-size: .7rem;
  color: var(--theme-contrast-color);
  background-color: var(--primary-color);
}
.achievement-item-accomplished {
  padding: 2px 12px;
  border-radius: calc(.7rem * 1.6 + 4px);
  font-size: .7rem;
  color: var(--theme-contrast-color);
  background-color: var(--primary-color);
  cursor: pointer;
}

.achievement-item-progress {
  width: 100%;
  height: 6px;
  background-color: transparent;
  border: 1px solid var(--border-color);
  border-radius: 3px;
  overflow: hidden;
}
.achievement-item-progress-bar {
  width: 100%;
  height: 100%;
}
.achievement-item-progress-bar-fill {
  height: 100%;
  background-color: var(--secondary-color);
  border-radius: 3px;
  transition: width 0.3s ease-in-out;
}

/* daily */
.achievements-tabs-content-item.daily {
  display: flex;
  flex-direction: column;
  gap: 15px;
  width: 100%;
  height: 100%;
  overflow-y: auto;
  scrollbar-width: none;
  -ms-overflow-style: none;
}

